--- a/index.html
+++ b/index.html
@@ -9,8 +9,69 @@
 </head>
 <body>
     <a-scene environment="preset: forest; shadow: true;">
-        <a-box position="0 1 -3" color="#4CC3D9"></a-box>
-        <a-sky color="#ECECEC"></a-sky>
+      <!-- 小卡片：觸發展開 -->
+      <a-plane id="triggerCard"
+               position="0 1.5 -3"
+               width="1.2" height="0.8"
+               color="#4CC3D9"
+               class="clickable"
+               text="value: 點擊查看內容; align: center; color: white;">
+      </a-plane>
+
+        <!-- 展開的大卡片 -->
+        <a-entity id="dialogueCard">
+            <!-- 大卡片本體 -->
+            <a-plane id="dialogueBox"
+                    visible="false"
+                    position="0 1.5 -2.5"
+                    width="2.5" height="1.5"
+                    color="#FFFFFF"
+                    material="opacity: 0.95"
+                    text="value: 這是一張展開的卡片，可用來顯示更多內容；align: center; color: black;">
+            </a-plane>
+        
+            <!-- 關閉按鈕 -->
+            <a-plane id="closeButton"
+                    visible="false"
+                    class="clickable"
+                    position="0 0.6 -2.4"
+                    width="0.5" height="0.2"
+                    color="#FF6B6B"
+                    text="value: 關閉; align: center; color: white;">
+            </a-plane>
+        </a-entity>
+
+      <!-- 地板與光源 -->
+      <a-light type="ambient" color="#BBB"></a-light>
+      <a-plane rotation="-90 0 0" width="10" height="10" color="#CEF2C3"></a-plane>
+
+      <!-- 相機與光標 -->
+      <a-entity camera look-controls>
+        <a-cursor fuse="false"
+            raycaster="objects: .clickable"
+            material="color: white; shader: flat">
+        </a-cursor>
+      </a-entity>  
     </a-scene>
+
+    <!-- 控制邏輯 -->
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const triggerCard = document.querySelector('#triggerCard');
+            const dialogueBox = document.querySelector('#dialogueBox');
+            const closeButton = document.querySelector('#closeButton');
+
+            triggerCard.addEventListener('click', () => {
+            console.log("小卡片被點擊了！");
+            dialogueBox.setAttribute('visible', true);
+            closeButton.setAttribute('visible', true);
+            });
+
+            closeButton.addEventListener('click', () => {
+            dialogueBox.setAttribute('visible', false);
+            closeButton.setAttribute('visible', false);
+            });
+        });
+    </script>
 </body>
 </html>
