--- a/index.html
+++ b/index.html
@@ -1,76 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webxr Demo</title>
-    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-environment-component@1.3.1/dist/aframe-environment-component.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Webxr Multi-Scene</title>
+  <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+  <script src="https://unpkg.com/aframe-environment-component@1.3.1/dist/aframe-environment-component.min.js"></script>
 </head>
 <body>
-    <a-assets>
-        <img id="yourImage" src="./image/images.png">
-    </a-assets>
-    <a-scene environment="preset: forest; shadow: true;">
-      <!-- 小卡片：觸發展開 -->
-      <a-plane id="triggerCard"
-            position="0 1.5 -3"
-            width="1.2" height="0.8"
-            color="#4CC3D9"
-            class="clickable">
-      </a-plane>
+    <a-scene id="mainScene" environment="preset: forest; shadow: true;">
+        <a-entity id="doorContainer"></a-entity>
 
-        <!-- 展開的大卡片 -->
-        <a-entity id="dialogueCard">
-            <!-- 大卡片本體 -->
-            <a-plane id="dialogueBox"
-                    visible="false"
-                    position="0 1.5 -2.5"
-                    width="2.5" height="2.5"
-                    material="src: #yourImage; opacity: 1;">
-            </a-plane>
-        
-            <!-- 關閉按鈕 -->
-            <a-plane id="closeButton"
-                    visible="false"
-                    class="clickable"
-                    position="0 0.4 -2.4"
-                    width="0.5" height="0.2"
-                    color="#FF6B6B">
-            </a-plane>
+        <!-- 光源與地板 -->
+        <a-light type="ambient" color="#BBB"></a-light>
+        <a-plane rotation="-90 0 0" width="10" height="10" color="#CEF2C3"></a-plane>
+
+        <!-- 相機與光標 -->
+        <a-entity camera look-controls>
+            <a-cursor fuse="false"
+                raycaster="objects: .clickable"
+                material="color: white; shader: flat">
+            </a-cursor>
         </a-entity>
-
-      <!-- 地板與光源 -->
-      <a-light type="ambient" color="#BBB"></a-light>
-      <a-plane rotation="-90 0 0" width="10" height="10" color="#CEF2C3"></a-plane>
-
-      <!-- 相機與光標 -->
-      <a-entity camera look-controls>
-        <a-cursor fuse="false"
-            raycaster="objects: .clickable"
-            material="color: white; shader: flat">
-        </a-cursor>
-      </a-entity>  
     </a-scene>
 
-    <!-- 控制邏輯 -->
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const triggerCard = document.querySelector('#triggerCard');
-            const dialogueBox = document.querySelector('#dialogueBox');
-            const closeButton = document.querySelector('#closeButton');
 
-            triggerCard.addEventListener('click', () => {
-                console.log("小卡片被點擊了！");
-                dialogueBox.setAttribute('visible', true);
-                closeButton.setAttribute('visible', true);
-            });
-
-            closeButton.addEventListener('click', () => {
-                dialogueBox.setAttribute('visible', false);
-                closeButton.setAttribute('visible', false);
-            });
-        });
-    </script>
+    <script src="main.js"></script>
 </body>
 </html>
