--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
   <script src="https://unpkg.com/aframe-environment-component@1.3.1/dist/aframe-environment-component.min.js"></script>
 </head>
 <body>
-    <a-scene id="mainScene" environment="preset: forest; shadow: true;">
+    <a-scene id="mainScene">
+        <a-assets>
+            <img id="img-forest" src="image/360/sky.jpg">
+            <img id="img-goldmine" src="https://live.staticflickr.com/65535/54231650240_eff404aa25_k.jpg">
+            <img id="img-arches" src="https://live.staticflickr.com/65535/54509611588_c738ebd94c_k.jpg">
+            <img id="img-yavapai" src="https://live.staticflickr.com/65535/54231245931_7679f9883f_k.jpg">
+        </a-assets>
+        
+        <a-sky id="sky" src="#img-forest" rotation="0 -90 0"></a-sky>
+        
         <a-entity id="doorContainer"></a-entity>
 
         <!-- 光源與地板 -->
