add video player logic

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
             <img id="img-chichenitza" src="https://live.staticflickr.com/65535/54231245931_7679f9883f_k.jpg">
             <img id="img-tajmahal" src="https://live.staticflickr.com/65535/54231245931_7679f9883f_k.jpg">
             <!-- 影片資源 -->
-            <video id="vid-colosseum" src="video/Inside the Colosseum - Rome's Most Iconic Landmark.mp4" autoplay loop crossorigin="anonymous"></video>
+            <video id="vid-colosseum" src="video/Colosseum.mp4" crossorigin="anonymous" playsinline></video>
+            <video id="vid-greatwall" src="video/The Great Wall Of China.mp4" crossorigin="anonymous" playsinline></video>
+            <video id="vid-petra" src="video/videoplayback.mp4"loop crossorigin="anonymous" playsinline></video>
+            <video id="vid-christstatue" src="video/christstatue.mp4" autoplay loop crossorigin="anonymous" playsinline></video>
+            <video id="vid-machupicchu" src="video/machupicchu.mp4" autoplay loop crossorigin="anonymous" playsinline></video>
+            <video id="vid-chichenitza" src="video/chichenitza.mp4" autoplay loop crossorigin="anonymous" playsinline></video>
+            <video id="vid-tajmahal" src="video/tajmahal.mp4" autoplay loop crossorigin="anonymous" playsinline></video>
         </a-assets>
         
         <a-sky id="sky" src="#img-forest" rotation="0 -90 0"></a-sky>
@@ -31,7 +37,7 @@
         <!-- 光源與地板 -->
         <a-light type="ambient" color="#BBB"></a-light>
         <a-plane rotation="-90 0 0" width="10" height="10" color="#CEF2C3"></a-plane>
-
+  
         <!-- 相機與光標 -->
         <a-entity camera look-controls>
             <a-cursor fuse="false"
