--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <!-- 影片資源 -->
             <video id="vid-colosseum" src="video/Colosseum.mp4" crossorigin="anonymous" playsinline></video>
             <video id="vid-greatwall" src="video/The Great Wall Of China.mp4" crossorigin="anonymous" playsinline></video>
-            <video id="vid-petra" src="video/videoplayback.mp4"loop crossorigin="anonymous" playsinline></video>
-            <video id="vid-christstatue" src="video/christstatue.mp4" autoplay loop crossorigin="anonymous" playsinline></video>
-            <video id="vid-machupicchu" src="video/machupicchu.mp4" autoplay loop crossorigin="anonymous" playsinline></video>
-            <video id="vid-chichenitza" src="video/chichenitza.mp4" autoplay loop crossorigin="anonymous" playsinline></video>
-            <video id="vid-tajmahal" src="video/tajmahal.mp4" autoplay loop crossorigin="anonymous" playsinline></video>
+            <video id="vid-petra" src="video/Petra, Jordan _ Civilisations - BBC.mp4" crossorigin="anonymous" playsinline></video>
+            <video id="vid-christstatue" src="video/The Majestic Statue of Christ the Redeemer -  Seven Wonders of the Modern World - See U in History.mp4" crossorigin="anonymous" playsinline></video>
+            <video id="vid-machupicchu" src="video/Machupicchu.mp4" crossorigin="anonymous" playsinline></video>
+            <video id="vid-chichenitza" src="video/Chichen Itza's Famous Pyramid is Actually Two Pyramids.mp4" crossorigin="anonymous" playsinline></video>
+            <video id="vid-tajmahal" src="video/TAJ MAHAL (Agra, India)_ full tour.mp4" crossorigin="anonymous" playsinline></video>
         </a-assets>
         
         <a-sky id="sky" src="#img-forest" rotation="0 -90 0"></a-sky>
