--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img id="img-greatwall" src="https://live.staticflickr.com/65535/54509611588_c738ebd94c_k.jpg">
             <img id="img-petra" src="https://live.staticflickr.com/65535/54231245931_7679f9883f_k.jpg">
             <img id="img-christstatue" src="https://live.staticflickr.com/65535/54231245931_7679f9883f_k.jpg">
-            <img id="img-machupicchu" src="https://live.staticflickr.com/65535/54231245931_7679f9883f_k.jpg">
+            <img id="img-machupicchu" src="image/360/Machu_Picchu.jpg">
             <img id="img-chichenitza" src="https://live.staticflickr.com/65535/54231245931_7679f9883f_k.jpg">
             <img id="img-tajmahal" src="https://live.staticflickr.com/65535/54231245931_7679f9883f_k.jpg">
             <!-- 影片資源 -->
