--- a/index.html
+++ b/index.html
@@ -15,15 +15,23 @@
             <a-asset-item id="img-door" src="image/interior_door_w_framing.glb"></a-asset-item>
             <a-asset-item id="scene-forest" src="image/unreal_engine_4_sky.glb"></a-asset-item>
             <img id="info-bg" src="image/background@2x.png">
+            <img id="door-label" src="image/door_board@2x.png"/>
             <!-- 圖片資源 -->
             <img id="img-forest" src="image/360/sky.jpg" crossorigin="anonymous">
-            <img id="img-colosseum" src="https://live.staticflickr.com/975/40452472730_451970b325_5k.jpg" crossorigin="anonymous">
-            <img id="img-greatwall" src="https://live.staticflickr.com/7883/47437761662_7c6afb01c9_5k.jpg" crossorigin="anonymous">
-            <img id="img-petra" src="https://live.staticflickr.com/7833/47096473752_4a64a22d61_k.jpg" crossorigin="anonymous">
-            <img id="img-christstatue" src="image/360/Cristo_Redentor.jpg" crossorigin="anonymous">
+            <img id="img-colosseum" src="image/360/1_羅馬競技場.jpg" crossorigin="anonymous">
+            <img id="img-greatwall" src="image/360/2_萬里長城.jpg" crossorigin="anonymous">
+            <img id="img-petra" src="image/360/3_佩特拉古城.jpg" crossorigin="anonymous">
+            <img id="img-christstatue" src="image/360/4_里約熱內盧基督像.jpg" crossorigin="anonymous">
             <img id="img-machupicchu" src="image/360/Machu_Picchu_.jpg" crossorigin="anonymous">
-            <img id="img-chichenitza" src="https://live.staticflickr.com/3083/2578304604_8753268597_b.jpg" crossorigin="anonymous">
-            <img id="img-tajmahal" src="https://live.staticflickr.com/4565/24412196648_16f4590ab5_b.jpg" crossorigin="anonymous">
+            <img id="img-chichenitza" src="image/360/6_契琴伊薩.jpg" crossorigin="anonymous">
+            <img id="img-tajmahal" src="image/360/7_泰姬瑪哈陵.jpg" crossorigin="anonymous">
+            <img id="door-label-colosseum" src="image/羅馬競技場@2x.png" crossorigin="anonymous">
+            <img id="door-label-greatwall" src="image/望里長城@2x.png" crossorigin="anonymous">
+            <img id="door-label-petra" src="image/佩特拉古城@2x.png" crossorigin="anonymous">
+            <img id="door-label-christstatue" src="image/里約耶穌像@2x.png" crossorigin="anonymous">
+            <img id="door-label-machupicchu" src="image/馬丘比丘@2x.png" crossorigin="anonymous">
+            <img id="door-label-chichenitza" src="image/契琴尹薩@2x.png" crossorigin="anonymous">
+            <img id="door-label-tajmahal" src="image/泰姬瑪哈陵@2x.png" crossorigin="anonymous">
             <!-- 影片資源 -->
             <video id="vid-colosseum" src="video/Colosseum.mp4" crossorigin="anonymous" playsinline></video>
             <video id="vid-greatwall" src="video/The Great Wall Of China.mp4" crossorigin="anonymous" playsinline></video>
